criando um DTO para o request
