# src/main/resources/swagger/api.yml
@@ -38,6 +38,8 @@ paths:
 
 
     post:
+      tags:
+        - monetaryconverter
       operationId: create
       summary: Faz a conversão de moeda.
       requestBody:
@@ -46,7 +48,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MonetaryConverterDTO'
+              $ref: '#/components/schemas/MonetaryConverterRequestDTO'
       responses:
         '201':
           description: Sucesso ao listar todas as transações.
@@ -63,6 +65,8 @@ paths:
 
   '/v1/monetaryconverter/{idUser}':
     get:
+      tags:
+        - monetaryconverter
       operationId: findforidUsers
       summary: Recupera a lista de monetaryconverter por usuário.
       parameters:
@@ -152,6 +156,44 @@ components:
           description: "Valo já preenchido na moeda de destino."
           example: "7.00"
           x-pattern-message: "Deve conter apenas números."
+
+      required:
+        - idUser
+        - origenCurrency
+        - origenCurrencyValue
+        - destinationCurrency
+
+    MonetaryConverterRequestDTO:
+      type: object
+      description: Entrada de dados
+      properties:
+        idUser:
+          type: "string"
+          description: Código do Usuário
+          example: "999999999"
+          pattern: '[0-9]{1,9}'
+          x-pattern-message: "Deve conter apenas numeros e deve de 1 a 9 digitos."
+        origenCurrency:
+          type: string
+          description: "Moeda de origem"
+          minLength: 1
+          maxLength: 3
+          example: "BRL"
+          pattern: "^BRL||USD||EUR||JPY$"
+          x-pattern-message: "Campo origenCurrency deve ser BRL,USD,EUR ou JPY."
+        origenCurrencyValue:
+          type: "number"
+          format: "double"
+          description: "Campo valor para ser a ser convertido."
+          example: "7.00"
+          x-pattern-message: "Deve conter apenas números."
+        destinationCurrency:
+          type: string
+          description: "Moeda de destino"
+          example: "BRL"
+          pattern: "^[BRL||USD||EUR||JPY]{1,3}$"
+          x-pattern-message: "Campo destinationCurrency deve ser BRL,USD,EUR ou JPY."
+
 
       required:
         - idUser
